<resources>
    <string name="app_name">OranGo</string>
    <string name="skip">Skip</string>
    <string name="next">next</string>
    <string name="back">back</string>

    <string name="no_more_long_queues">No more long queues</string>
    <string name="you_can_now_skip_long_queues_at_stores_while_shopping">You can now skip long queues at stores while shopping</string>

    <string name="scan_title">Scan products</string>
    <string name="scan_body">Use the camera to scan products by photo recognition</string>

    <string name="credit_title">Easy Payment</string>
    <string name="credit_body">Choose the convenient payment method for you</string>

    <string name="email_title">Receipt via email</string>
    <string name="email_body">You\'ll receive a confirmation email with order details</string>
    <string name="scan2go"><font size="45"><b>Scan<font color='#FCC300'>2</font>Go</b></font>\n<font size="23">Save Time! Skip The Line!</font></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LogIn</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up_with_Style">Sign <font color='#FDC400'>Up</font></string>
    <string name="log_in_with_Style">Log <font color='#FDC400'>In</font></string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="recommended">Recommended</string>
    <string name="cart">Cart</string>
    <string name="services">Services</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_300"><strike>300$</strike></string>
    <string name="or">Or</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="we_have_send_an_otp_number_to_your_mobile_phone">We have send an <b>OTP number</b> \n to your mobile phone</string>
    <string name="please_enter_the_otp_n_to_complete_the_registration">Please enter the OTP \n to complete the registration</string>
    <string name="resend">Resend</string>
    <string name="next_cap">Next</string>
    <string name="asterik">*</string>
    <string name="see_all">See All</string>
    <string name="best_selling">Best Selling</string>
    <string name="offers">Offers</string>
    <string name="categories">Categories</string>
    <string name="setting">Setting</string>
    <string name="product_price">%1$d LE</string>
    <string name="product_weight"><b><font color='#FCC300'>Weight:</font></b> %1$d lb</string>
    <string name="product_price_per_lb">%1$d LE per lb</string>
    <string name="product_price_per_each">%1$d LE per each</string>
    <string name="product_total_price">%1$d LE</string>
    <string name="product_quantity"><b><font color='#FCC300'>Qty:</font></b> %1$d</string>
    <string name="notification">Notification</string>
    <string name="your_notifications_about_offers_will_appear_here">Your notifications about offers will appear here.</string>
    <string name="profile">Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="receipt_total_price">%1$d LE</string>
    <string name="abdelrhman_ghanem">Abdulrahman Ragab</string>
    <string name="android_developer">Android Developer</string>
    <string name="about_us">About Us</string>
    <string name="about_the_project">About the Project:</string>
    <string name="with_the_help_of_app_you_can_make_purchases_without_queuing_with_special_features_to_make_shopping_experience_more_convenient_and_safe_without_contacting_a_signal_person">- With the help of "OranGo" app, you can make purchases without queuing with special features. \n- To make shopping experience more convenient and safe without contacting a signal person.</string>
    <string name="our_team">Our Team:</string>
    <string name="add_credit_card">Add Credit Card</string>
    <string name="your_past_searches">Your Past Searches:</string>
    <string name="search_product">Search Product</string>
    <string name="receipt">Receipt</string>
    <string name="total_price_125_5"><b>Total Price:</b> 125.5$</string>
    <string name="items_12"><b>Items:</b> 12</string>
    <string name="receipt_history">Receipt History</string>
    <string name="cust_name_sara_ali_el_wakeel">Cust. name:  Sara Ali El-Wakeel</string>
    <string name="card_no_226">Card No.: ********226</string>
    <string name="receipt_no_1">Receipt No. 1</string>
    <string name="order_no">Order No.:</string>
    <string name="order_date">Order Date:</string>
    <string name="item_no">Item No.:</string>
    <string name="order_total">Order Total:</string>
    <string name="_03_08_2022">03/08/2022</string>
    <string name="_125_5">$125.5</string>
    <string name="you_saved_12_6">You Saved $12.6</string>
    <string name="organic_tomato">Organic Tomato</string>
    <string name="_15">15$</string>
    <string name="floor_2_lane_4">Floor 2, Lane 4</string>
    <string name="similar_products">Similar Products</string>
    <string name="product_decription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</string>
    <string name="points">Points</string>
    <string name="egp">EGP</string>
    <string name="_12_000">12 000</string>
    <string name="_120">120</string>
    <string name="to_earn_more_points_your_receipt_must_reach_100_each_point_1">To earn more points, your receipt must reach <font color="#FCC300">100$</font> Each point = 1$</string>
    <string name="dialog">Dialog</string>
    <string name="credit_card">Credit Card</string>
    <string name="_125">***********125</string>
    <string name="payment_details">Payment Details</string>
    <string name="customize_your_payment_method">Customize your payment method</string>
    <string name="add_a_credit_or_debit_card">Add a credit or debit card</string>
    <string name="notes">Notes</string>
    <string name="add_new_note">Add New Note</string>
    <string name="card_number">Card Number</string>
    <string name="security_code">Security Code</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="yy">YY</string>
    <string name="mm">MM</string>
    <string name="fruits">Fruits</string>
    <string name="product_price_before_discount">%s L.E</string>
    <string name="checkout">Checkout</string>
    <string name="you_re_all_set_n_just_return_your_cart_amp_we_ll_email_your_receipt"><b>You\'re all set</b>\nJust return your cart &amp; we\'ll email your receipt</string>
    <string name="view_receipt">View Receipt</string>
    <string name="contact_us">Contact Us</string>
    <string name="if_you_have_any_feedback_contact_us">If you have any feedback, contact us</string>
    <string name="type_here">Type here...</string>
    <string name="send">Send</string>
    <string name="favourites">Favourites</string>
    <string name="suggested_meals">Suggested Meals</string>
    <string name="back_to_home">Back to Home</string>
    <string name="receipt_items">Receipt Items</string>
    <string name="scan">Scan</string>
    <string name="set_budget">Set Budget</string>
    <string name="add_manual">Add Manual</string>
    <string name="qty">Qty:</string>
    <string name="scan_2_go">Scan2Go</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="no_of_items">10 Items</string>
    <string name="add_item_to_cart">Add Item To Cart</string>
    <string name="_89_1561381">89 1561381</string>
    <string name="add_item">Add Item</string>
    <string name="cancel">Cancel</string>
    <string name="choose_an_amount_for_your_budget_it_won_t_stop_any_purchases_but_we_ll_let_you_know_when_you_get_close_to_that_amount_it_s_automatically_removed_after_finishing_your_shopping">Choose an amount for your budget. It won\'t stop any purchases, but we\'ll let you know when you get close to that amount. It\'s automatically removed after finishing your shopping.</string>
    <string name="submit">Submit</string>
    <string name="_850_le">850 LE</string>
    <string name="finished_from_shopping">Finished From Shopping?</string>
    <string name="checkout_confirmation">Checkout Confirmation</string>
    <string name="are_you_sure_you_want_to_checkout">Are you sure you want to checkout?</string>
    <string name="budget_exceeded">Budget Exceeded</string>
    <string name="you_have_reached_the_budget_you_set_ntotal_price_850_le">You have reached the budget you set\nTotal Price = 850 LE</string>
    <string name="got_it">Got it</string>
    <string name="you_have_1200_points_do_you_want_to_use_them">You have 1200 points, do you want to use them?</string>
    <string name="yes">Yes</string>
    <string name="use_points">Use Points</string>
    <string name="no">No</string>
    <string name="delete_confirmation">Delete Confirmation</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account? 🥹</string>
    <string name="delete">Delete</string>
    <string name="logout_confirmation">Logout Confirmation</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout? 😒</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure_you_want_to_delete_all_notes">Are you sure you want to delete all notes?</string>
</resources>