<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/points_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/points_icon"
        app:layout_constraintBottom_toTopOf="@+id/textView329"
        app:layout_constraintEnd_toStartOf="@+id/textView428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView428"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="290dp"
        android:text="@string/points"
        app:layout_constraintBottom_toBottomOf="@+id/points_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/points_icon"
        app:layout_constraintTop_toTopOf="@+id/points_icon" />

    <TextView
        android:id="@+id/textView329"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="@dimen/_24sdp"
        android:text="@string/you_have_1200_points_do_you_want_to_use_them"
        app:layout_constraintBottom_toTopOf="@+id/use_points"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView428" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/use_points"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/use_points"
        android:textAllCaps="false"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="@+id/cancel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView329"
        app:layout_constraintStart_toStartOf="@+id/textView329"
        app:layout_constraintTop_toBottomOf="@+id/textView329" />


</androidx.constraintlayout.widget.ConstraintLayout>