<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <ImageView
        android:id="@+id/plus_icon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:src="@drawable/plus_icon"
        app:layout_constraintBottom_toTopOf="@+id/parcodeTextInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="206dp"
        android:text="@string/add_item_to_cart"
        app:layout_constraintBottom_toBottomOf="@+id/plus_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plus_icon"
        app:layout_constraintTop_toTopOf="@+id/plus_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parcodeTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/add_item"
        app:layout_constraintEnd_toEndOf="@+id/textView36"
        app:layout_constraintStart_toStartOf="@+id/plus_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView36">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parcodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/_89_1561381"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_item"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/add_item"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="@+id/cancel"
        app:layout_constraintEnd_toEndOf="@+id/parcodeTextInputLayout"
        app:layout_constraintStart_toEndOf="@+id/cancel"
        app:layout_constraintTop_toTopOf="@+id/cancel" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/gray"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/parcodeTextInputLayout"
        app:layout_constraintStart_toStartOf="@+id/parcodeTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/parcodeTextInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>